# scope-microscope

./: README.md  pyproject.toml
src/scope_microscope/: __init__.py  convert.py  noise_schedule.py  pipeline.py  schema.py
